# local-tokenizer

./: README.md  pyproject.toml
src/localtokens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/tokenizer/: engine.py  main.py  utils.py
